src/engine_core.h

typedef unsigned long long U64;
typedef struct
{
    int from;
    int to;
    int promotion;
    int capture;
    int score;
} Move;
Move find_best_move_c(const char *fen, double time_limit, double time_left, double increment, int moves_to_go, int move_number, int max_depth, long long node_limit, int *out_nodes,
                 U64 *game_history, int game_history_count);
Move find_best_move_smp(const char *fen, double time_limit, double time_left, double increment, int moves_to_go, int move_number, int max_depth, long long node_limit, int *out_nodes,
                 U64 *game_history, int game_history_count);
U64 compute_hash_from_fen(const char *fen);
/* LMR statistics structure */
typedef struct
{
    int reductions;  // Number of times LMR was applied
    int re_searches; // Number of times re-search was needed
    int nodes_saved; // Estimated nodes saved by LMR
} LMR_Stats;
/* Get LMR statistics from last search */
LMR_Stats get_lmr_stats(void);
/* Futility Pruning statistics structure */
typedef struct
{
    int prunes;      // Number of times Futility Pruning was applied
    int nodes_saved; // Estimated nodes saved by Futility Pruning
} Pruning_Stats;
/* Get Futility Pruning statistics from last search */
Pruning_Stats get_pruning_stats(void);
/* Get last search info (0=depth, 1=nodes, 2=score) */
int get_last_search_info(int what);
/* Perft function for move generation testing */
U64 perft(const char *fen, int depth);
/* Global abort flag for stopping search externally */
void set_engine_abort(int flag);
/* Bug Hunter: board consistency check (make/unmake + incremental state) */
int board_consistency_check(const char *fen);
/* Bug Hunter: perft divide (per-move perft counts) */
int perft_divide(const char *fen, int depth, int *out_from, int *out_to,
                 int *out_promo, U64 *out_count, U64 *out_total);
/* Bug Hunter: SEE value for a move */
int see_test(const char *fen, int from_sq, int to_sq);
/* Bug Hunter: eval consistency stress test */
int eval_consistency_stress(const char *fen, int cycles);
/* Pruning toggle control for ablation testing */
int set_search_param(const char *name, int value);
int get_search_param(const char *name);
int reload_params(const char *filename);
/* ============================================================================
 * SEARCH PROFILE — Performance instrumentation for profiling
 * ============================================================================ */
typedef struct {
    long long eval_calls;        /* evaluate() invocations */
    long long qs_calls;          /* quiescence_search() invocations */
    long long make_move_calls;   /* make_move() invocations */
    long long unmake_move_calls; /* unmake_move() invocations */
    long long nmp_triggered;     /* Null Move Pruning applied */
    long long nmp_cutoffs;       /* NMP resulted in beta cutoff */
    long long rfp_triggered;     /* Reverse Futility Pruning applied */
    long long lmr_applied;       /* LMR reductions applied */
    long long lmr_full_research; /* LMR re-searches at full depth */
    long long futility_pruned;   /* Futility pruned moves */
    long long razoring_triggered;/* Razoring applied */
    long long lmp_pruned;        /* Late Move Pruning pruned moves */
    long long see_pruned;        /* SEE-based capture pruning */
    long long history_pruned;    /* History-based pruning */
    long long probcut_triggered; /* ProbCut applied */
    long long probcut_cutoffs;   /* ProbCut resulted in beta cutoff */
    long long tt_hits;           /* Transposition table hits */
    long long tt_stores;         /* TT entries stored */
    long long total_nodes;       /* Total nodes searched */
    long long qs_nodes;          /* Nodes in quiescence search */
} SearchProfile;
SearchProfile get_search_profile(void);
void reset_search_profile(void);